--- a/thuzioapp/templates/thuzioapp/index.html
+++ b/thuzioapp/templates/thuzioapp/index.html
@@ -1,9 +1,8 @@
 {% extends "thuzioapp/base.html" %}
 
-{% block title %} Bla {% endblock %}
+{% block title %} Welcome {% endblock %}
 
 {% block content %}
-<h1>Testing</h1>
 <br>
 {% if all_products %}
 <ul>
