--- a/thuzioapp/templates/thuzioapp/index.html
+++ b/thuzioapp/templates/thuzioapp/index.html
@@ -1,6 +1,6 @@
 {% extends "thuzioapp/base.html" %}
 
-{% block title %} Welcome {% endblock %}
+{% block title %} Index {% endblock %}
 
 {% block content %}
 <br>
