--- a/thuzioapp/templates/thuzioapp/index.html
+++ b/thuzioapp/templates/thuzioapp/index.html
@@ -1,9 +1,10 @@
 {% extends "thuzioapp/base.html" %}
 
-{% block title %} Index {% endblock %}
+{% block title %} Thuzio.com {% endblock %}
 
 {% block content %}
-<br>
+
+<div class="content">
 {% if all_products %}
 <ul>
 	{% for product in all_products %}
@@ -13,7 +14,8 @@
 </ul>
 
 {% else %}
-	<h1>No products</h1>
+<h1>No products</h1>
 {% endif %}
+</div>
 
 {% endblock%}
