--- a/thuzioapp/templates/thuzioapp/signin.html
+++ b/thuzioapp/templates/thuzioapp/signin.html
@@ -7,13 +7,14 @@
 <p>Your username and password didn't match. Please try again.</p>
 {% endif %} -->
 <form method="post" action="{% url 'thuzioapp:logging_in' %}">
-{% csrf_token %}
-Username: <input type="text" name="username" id="username" value="{{ username }}" />
-<label for="{{ username }}">{{ username.text }}</label><br/>
+	{% csrf_token %}
+	Username: <input type="text" name="username" id="username" value="{{ username }}" />
+	<label for="{{ username }}">{{ username.text }}</label><br/>
 
-Password: <input type="text" name="password" id="password" value="{{ password }}" />
-<label for="{{ password }}">{{ password.text }}</label><br/>
+	Password: <input type="text" name="password" id="password" value="{{ password }}" />
+	<label for="{{ password }}">{{ password.text }}</label><br/>
 
-<input type="submit" value="Submit" />
+	<input type="submit" value="Submit" />
+</form>
 
 {% endblock %}
