installed static, about to try out django-bootstrap3

--- a/thuzioapp/templates/thuzioapp/base.html
+++ b/thuzioapp/templates/thuzioapp/base.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <title>{% block title %}Thuzio.com{% endblock %}</title>
+    {% load staticfiles %}
+	<link rel="stylesheet" type="text/css" href="{% static 'thuzioapp/main.css' %}" />
 </head>
 
 <body>
