uninstalled django jquery andd added it in via script in header, added paginator in index

--- a/thuzioapp/templates/thuzioapp/base.html
+++ b/thuzioapp/templates/thuzioapp/base.html
@@ -8,9 +8,8 @@
     {% load staticfiles %}
     {% load bootstrap3 %}
 	{% bootstrap_css %}
-	<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.js"></script>
+	<script src="http://code.jquery.com/jquery-latest.js"></script>
 	{% bootstrap_javascript %}
-
 	<link rel="stylesheet" type="text/css" href="{% static 'thuzioapp/main.css' %}" />
 </head>
 
@@ -27,7 +26,7 @@
         {% block content %}{% endblock %}
     </div>
 
-
+    <!-- <script type="text/javascript" src="{% static '{{ STATIC_URL }}js/jquery.js' %}" /> -->
 </body>
 
 </html>
