about added, more templating, request context issue on index solved, additional css loading, signin page redesigned

--- a/thuzioapp/templates/thuzioapp/about.html
+++ b/thuzioapp/templates/thuzioapp/about.html
@@ -1,12 +1,11 @@
 {% extends "thuzioapp/base.html" %}
 {% load staticfiles %}
-{% block title %} Complete {% endblock %}
+{% block title %} About {% endblock %}
 
 {% block addl_styles %} 
 	{{ block.super }}
 {% endblock %}
 
-
 {% block content %}
-<p>PURCHASE COMPLETE!</p>
-{% endblock%}
+<p>Thuzio is about all sorts of cool stuff</p>
+{% endblock %}
