--- a/thuzioapp/static/thuzioapp/css/main.css
+++ b/thuzioapp/static/thuzioapp/css/main.css
@@ -1,3 +1,14 @@
+/*
+ * Style tweaks
+ * --------------------------------------------------
+ */
+html,
 body {
-	background-color: green;
+  overflow-x: hidden; /* Prevent scroll on narrow devices */
+}
+body {
+  padding-top: 70px;
+}
+footer {
+  padding: 30px 0;
 }
