--- a/thuzioapp/templates/thuzioapp/base.html
+++ b/thuzioapp/templates/thuzioapp/base.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Thuzio Challenge 2">
+    <meta name="author" content="Joe Jung">
+
     <title>{% block title %}Thuzio.com{% endblock %}</title>
 
     <!-- Load dependencies -->
@@ -17,22 +20,40 @@
 
 	<!-- Load CSS -->
 	<link rel="stylesheet" type="text/css" href="{% static 'thuzioapp/css/main.css' %}" />
+	{% block addl_styles %}{% endblock %}
 </head>
 
 <body>
-	<div id='signin-bar'>
-	{% if user.is_authenticated %}
-		<a href="/thuzioapp/signout">Signout</a>
-	{% else %}
-		<a href="/thuzioapp/signin">Sign In</a>
-	{% endif %}	
-	</div>
+	<div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+    	<div class="container">
+        	<div class="navbar-header">
+	          	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+	            	<span class="sr-only">Toggle navigation</span>
+	            	<span class="icon-bar"></span>
+	            	<span class="icon-bar"></span>
+	            	<span class="icon-bar"></span>
+	          	</button>
+	          	<a class="navbar-brand" href="{% url 'thuzioapp:index' %}">Thuzio.com</a>
+        	</div>
 
-    <div id="content">
+	        <div class="collapse navbar-collapse">
+	         	<ul class="nav navbar-nav">
+	          		<li><a href="{% url 'thuzioapp:about' %}" />About</a></li>
+					{% if user.is_authenticated %}
+						<li><a href="{% url 'thuzioapp:signout' %}">Signout</a></li>
+					{% else %}
+						<li><a href="{% url 'thuzioapp:signin' %}">Sign In</a></li>
+					{% endif %}	
+	          	</ul>
+	        </div><!-- /.nav-collapse -->
+	    </div><!-- /.container -->
+	</div><!-- /.navbar -->
+
+    <div id="container">
         {% block content %}{% endblock %}
     </div>
 
-    <!-- <script type="text/javascript" src="{% static '{{ STATIC_URL }}js/jquery.js' %}" /> -->
+    <script type="text/javascript" src="{% static 'thuzioapp/js/main.js' %}" /></script>
 </body>
 
 </html>
