--- a/thuzioapp/static/thuzioapp/css/main.css
+++ b/thuzioapp/static/thuzioapp/css/main.css
@@ -10,5 +10,21 @@ body {
   padding-top: 70px;
 }
 footer {
-  padding: 30px 0;
+	color: white;
+	background-color: black;
+	position: fixed;
+	bottom: 0px;
+  	border: 1px solid blue;
+  	width: 100%;
+  	height: 30px;
+  	line-height: 30px;
+  	padding: 0 10px 0 10px;
+}
+
+#login-status {
+	float: left;
+}
+
+#shopping-cart-status {
+	float: right;
 }
