cart built out, checkout order link, additional static loading to templates, idea for price rendering with js hidden detecting meta on head of membership level

--- a/thuzioapp/templates/thuzioapp/about.html
+++ b/thuzioapp/templates/thuzioapp/about.html
@@ -6,6 +6,14 @@
 	{{ block.super }}
 {% endblock %}
 
+{% block addl_js %}
+	{{ block.super }}
+{% endblock %}
+
+{% block addl_head %}
+	{{ block.super }}
+{% endblock %}
+
 {% block content %}
 <p>Thuzio is about all sorts of cool stuff</p>
 {% endblock %}
