--- a/thuzioapp/templates/thuzioapp/cart.html
+++ b/thuzioapp/templates/thuzioapp/cart.html
@@ -1,10 +1,10 @@
 {% extends "thuzioapp/base.html" %}
 {% load staticfiles %}
-{% block title %} Thuzio.com {% endblock %}
+{% block title %} About {% endblock %}
 
 {% block addl_styles %} 
 	{{ block.super }}
-	<link rel="stylesheet" type="text/css" href="{% static 'thuzioapp/css/index.css' %}" />
+	<link rel="stylesheet" type="text/css" href="{% static 'thuzioapp/css/cart.css' %}" />
 {% endblock %}
 
 {% block addl_js %}
@@ -15,9 +15,8 @@
 	{{ block.super }}
 {% endblock %}
 
-
 {% block content %}
-<div id="products-container">
+<div id="shopping-cart-container">
 	{% for product in products %}
 	<div class=product-box>
 		<a href="{% url 'thuzioapp:detail' product.id %}">{{ product.title }}</a><br />
@@ -26,31 +25,8 @@
 		<span class="pricing">Silver Members: ${{ product.price_unit_silver }}</span><br />
 		<span class="pricing">Gold Members: ${{ product.price_unit_gold }}</span><br />
 		<span class="pricing"><strong>Platinum: ${{ product.price_unit_platinum }} &amp; FREE SHIPPING!</span></strong><br />
-		<form action="{% url 'thuzioapp:add_to_cart' %}" method="post">
-		{% csrf_token %}
-		    <input type="hidden" name="product" id="product" value="{{ product.pk }}" />
-		    <input type="submit" value="Add To Cart" />
-		</form>
-	</div>
 	{% endfor %}
+
 </div>
 
-<div class="clearfix"></div>
-
-<div class="pagination">
-	<span class="step-links">
-		{% if products.has_previous %}
-			<a href="?page={{ products.previous_page_number }}"> Previous</a>
-		{% endif %}
-
-		<span class="current">
-			Page {{ products.number }} of {{ products.paginator.num_pages }}.
-		</span>
-
-		{% if products.has_next %}
-			<a href="?page={{ products.next_page_number }}">next</a>
-		{% endif %}
-	</span>
-</div>
-
-{% endblock%}
+{% endblock %}
