--- a/thuzioapp/templates/thuzioapp/checkout.html
+++ b/thuzioapp/templates/thuzioapp/checkout.html
@@ -6,6 +6,14 @@
 	{{ block.super }}
 {% endblock %}
 
+{% block addl_js %}
+	{{ block.super }}
+{% endblock %}
+
+{% block addl_head %}
+	{{ block.super }}
+{% endblock %}
+
 {% block content %}
 <p>CHECKOUT</p>
 {% endblock%}
