--- a/thuzioapp/templates/thuzioapp/signin.html
+++ b/thuzioapp/templates/thuzioapp/signin.html
@@ -7,6 +7,14 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'thuzioapp/css/signin.css' %}" />
 {% endblock %}
 
+{% block addl_js %}
+	{{ block.super }}
+{% endblock %}
+
+{% block addl_head %}
+	{{ block.super }}
+{% endblock %}
+
 {% block content %}
 <!-- {% if form.errors %}
 <p>Your username and password didn't match. Please try again.</p>
