--- a/thuzioapp/templates/thuzioapp/signup.html
+++ b/thuzioapp/templates/thuzioapp/signup.html
@@ -6,6 +6,14 @@
 	{{ block.super }}
 {% endblock %}
 
+{% block addl_js %}
+	{{ block.super }}
+{% endblock %}
+
+{% block addl_head %}
+	{{ block.super }}
+{% endblock %}
+
 {% block content %}
 <!-- {% if form.errors %}
 <p>Your username and password didn't match. Please try again.</p>
