--- a/thuzioapp/templates/thuzioapp/complete.html
+++ b/thuzioapp/templates/thuzioapp/complete.html
@@ -6,6 +6,13 @@
 	{{ block.super }}
 {% endblock %}
 
+{% block addl_js %}
+	{{ block.super }}
+{% endblock %}
+
+{% block addl_head %}
+	{{ block.super }}
+{% endblock %}
 
 {% block content %}
 <p>PURCHASE COMPLETE!</p>
