--- a/thuzioapp/templates/thuzioapp/cart.html
+++ b/thuzioapp/templates/thuzioapp/cart.html
@@ -1,6 +1,6 @@
 {% extends "thuzioapp/base.html" %}
 {% load staticfiles %}
-{% block title %} About {% endblock %}
+{% block title %} Shopping Cart {% endblock %}
 
 {% block addl_styles %} 
 	{{ block.super }}
@@ -20,11 +20,20 @@
 	{% for product in products %}
 	<div class=product-box>
 		<a href="{% url 'thuzioapp:detail' product.id %}">{{ product.title }}</a><br />
-		<a href="{% url 'thuzioapp:detail' product.id %}"><img src="{{ product.image_300x200 }}" /></a>
+		<a href="{% url 'thuzioapp:detail' product.id %}"><img src="{{ product.image_300x200 }}" /></a><br />
+		<span class="qty-in-cart">Qty in cart: {{ product.qty }}</span><br />
 		<span class="pricing">Regular Price: ${{ product.price_unit_normal }}</span><br />
 		<span class="pricing">Silver Members: ${{ product.price_unit_silver }}</span><br />
 		<span class="pricing">Gold Members: ${{ product.price_unit_gold }}</span><br />
 		<span class="pricing"><strong>Platinum: ${{ product.price_unit_platinum }} &amp; FREE SHIPPING!</span></strong><br />
+
+		<form action="{% url 'thuzioapp:remove_from_cart' %}" method="post">
+		{% csrf_token %}
+			<label for="{{ qty }}">Qty to remove: </label>
+			<input type="number" name="qty" id="qty" value="{{ qty }}" placeholder="{{ product.qty }}"/>
+		    <input type="hidden" name="product" id="product" value="{{ product.pk }}" />
+		    <input type="submit" value="Remove from cart" />
+		</form>
 	{% endfor %}
 
 </div>
