--- a/thuzioapp/templates/thuzioapp/index.html
+++ b/thuzioapp/templates/thuzioapp/index.html
@@ -28,6 +28,8 @@
 		<span class="pricing"><strong>Platinum: ${{ product.price_unit_platinum }} &amp; FREE SHIPPING!</span></strong><br />
 		<form action="{% url 'thuzioapp:add_to_cart' %}" method="post">
 		{% csrf_token %}
+			<label for="{{ qty }}">Qty: </label>
+			<input type="number" name="qty" id="qty" value="{{ qty }}" />
 		    <input type="hidden" name="product" id="product" value="{{ product.pk }}" />
 		    <input type="submit" value="Add To Cart" />
 		</form>
