trying to render the template tags thru .html

--- a/thuzioapp/static/thuzioapp/css/index.css
+++ b/thuzioapp/static/thuzioapp/css/index.css
@@ -4,6 +4,14 @@
 	width: 100%;
 }
 
+/*#index-top-container {
+	position: absolute;
+	height: 30%;
+	width: 100%;
+	border: 1px solid blue;
+}*/
+
+
 .product-box {
 	float: left;
 	width: 30%;
