--- a/thuzioapp/static/thuzioapp/css/main.css
+++ b/thuzioapp/static/thuzioapp/css/main.css
@@ -6,6 +6,7 @@ html,
 body {
   overflow-x: hidden; /* Prevent scroll on narrow devices */
 }
+
 body {
   padding-top: 70px;
 }
@@ -14,7 +15,7 @@ footer {
 	background-color: black;
 	position: fixed;
 	bottom: 0px;
-  	border: 1px solid blue;
+  	border-top: 1px solid blue;
   	width: 100%;
   	height: 30px;
   	line-height: 30px;
