--- a/thuzioapp/templates/thuzioapp/index.html
+++ b/thuzioapp/templates/thuzioapp/index.html
@@ -7,25 +7,39 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'thuzioapp/css/index.css' %}" />
 {% endblock %}
 
-{% block addl_js %}
-	{{ block.super }}
-{% endblock %}
-
 {% block addl_head %}
 	{{ block.super }}
+	<meta level="{{ level }}">
 {% endblock %}
 
 
 {% block content %}
 <div id="products-container">
+	<div id="index-top-container">
+
+		Level = {{ level }}
+	</div>
+	<div class="clearfix"></div>
+
+
 	{% for product in products %}
 	<div class=product-box>
 		<a href="{% url 'thuzioapp:detail' product.id %}">{{ product.title }}</a><br />
 		<a href="{% url 'thuzioapp:detail' product.id %}"><img src="{{ product.image_300x200 }}" /></a>
+
+		<hr />
+		{% if user.is_authenticated %}
+		<span id="membership-price"></span><br /><br />
+
+		{% else %}
 		<span class="pricing">Regular Price: ${{ product.price_unit_normal }}</span><br />
 		<span class="pricing">Silver Members: ${{ product.price_unit_silver }}</span><br />
 		<span class="pricing">Gold Members: ${{ product.price_unit_gold }}</span><br />
 		<span class="pricing"><strong>Platinum: ${{ product.price_unit_platinum }} &amp; FREE SHIPPING!</span></strong><br />
+
+		{% endif %}
+
+
 		<form action="{% url 'thuzioapp:add_to_cart' %}" method="post">
 		{% csrf_token %}
 			<label for="{{ qty }}">Qty: </label>
@@ -54,5 +68,10 @@
 		{% endif %}
 	</span>
 </div>
+
+{% block addl_js %}
+	{{ block.super }}
+	<script type="text/javascript" src="{% static 'thuzioapp/js/index.js' %}" />
+{% endblock %}
 
 {% endblock%}
