--- a/thuzioapp/static/thuzioapp/css/index.css
+++ b/thuzioapp/static/thuzioapp/css/index.css
@@ -27,6 +27,10 @@
 	margin: 5px auto 5px auto;
 }
 
+.membership-price {
+	display: none;
+}
+
 .pagination {
 	border: 1px solid black;
 	position: relative;
