--- a/thuzioapp/templates/thuzioapp/index.html
+++ b/thuzioapp/templates/thuzioapp/index.html
@@ -23,19 +23,22 @@
 
 
 	{% for product in products %}
-	<div class=product-box>
+	<div class="product-box">
 		<a href="{% url 'thuzioapp:detail' product.id %}">{{ product.title }}</a><br />
 		<a href="{% url 'thuzioapp:detail' product.id %}"><img src="{{ product.image_300x200 }}" /></a>
 
 		<hr />
 		{% if user.is_authenticated %}
-		<span id="membership-price"></span><br /><br />
+		<span class="membership-price regular">Price: {{ product.price_unit_normal }}<br /></span>
+		<span class="membership-price silver">Silver Discounted Price: {{ product.price_unit_silver }}<br /></span>
+		<span class="membership-price gold">Gold Discounted Price: {{ product.price_unit_gold }}<br /></span>
+		<span class="membership-price premium">Premium Discounted Price: {{ product.price_unit_premium }}<br /></span>
 
 		{% else %}
-		<span class="pricing">Regular Price: ${{ product.price_unit_normal }}</span><br />
-		<span class="pricing">Silver Members: ${{ product.price_unit_silver }}</span><br />
-		<span class="pricing">Gold Members: ${{ product.price_unit_gold }}</span><br />
-		<span class="pricing"><strong>Platinum: ${{ product.price_unit_platinum }} &amp; FREE SHIPPING!</span></strong><br />
+		<span class="pricing">Regular Price: ${{ product.price_unit_normal }}<br /></span>
+		<span class="pricing">Silver Members: ${{ product.price_unit_silver }}<br /></span>
+		<span class="pricing">Gold Members: ${{ product.price_unit_gold }}<br /></span>
+		<span class="pricing"><strong>Platinum: ${{ product.price_unit_platinum }} &amp; FREE SHIPPING!<br /></span></strong>
 
 		{% endif %}
 
