--- a/thuzioapp/static/thuzioapp/css/detail.css
+++ b/thuzioapp/static/thuzioapp/css/detail.css
@@ -1,6 +1,7 @@
 #detail-container {
 	width: 100%;
 	margin: 20px;
+	margin-bottom: 50px;
 }
 
 #detail-container h2 {
@@ -11,4 +12,8 @@
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+.membership-price {
+	display: none;
 }
