--- a/thuzioapp/templates/thuzioapp/checkout.html
+++ b/thuzioapp/templates/thuzioapp/checkout.html
@@ -11,10 +11,10 @@
 {% endblock %}
 
 {% block content %}
-<p>CHECKOUT</p>
+<h2>CHECKOUT</h2>
+
+{% endblock%}
 
 {% block addl_js %}
 	{{ block.super }}
 {% endblock %}
-
-{% endblock%}
