--- a/thuzioapp/templates/thuzioapp/about.html
+++ b/thuzioapp/templates/thuzioapp/about.html
@@ -11,7 +11,38 @@
 {% endblock %}
 
 {% block content %}
-<p>Thuzio is about all sorts of cool stuff</p>
+<p>This app is a proof of concept/MVP to learn the django framework. Future implementations for a production quality application must require the following...</p>
+
+<ul>
+	<li>Utilize forms / formfactory</li>
+		<ul>
+			<li>Dynamically generate form objects to pass into templates.</li>
+			<li>Add validation on forms</li>
+		</ul>
+	<li>Examine utilization of cache and user cases that could cause issues</li>
+	<li>Explore further abstraction of database models to limit excessive fields (perhaps store internal marketing related info into a non-relational db)</li>
+	<li>Add image processor to app for product images</li>
+	<li>Store/read images from s3 bucket for product images</li>
+	<li>Add redirect history</li>
+	<li>Add account options (reset/forgot password, remember me, etc)</li>
+	<li>Refactor front end JS (in particular the detail template (indexing elements is not scaleable)</li>
+	<li>Implement Promo's</li>
+		<ul>
+			<li>Add promo boolean field onto product in db</li>
+			<li>Add promo img src onto product in db = stored on s3</li>
+			<li>Add query on index action</li>
+			<li>Pass that product promo img into index template through request context and display the promo</li>
+			<li>Add functionality into adminCP so staff can choose which product to promo</li>
+			<li>Create image carousel to support multiple promo's</li>
+			<li>Add validation to ensure set # of promo's in carousel</li>
+		</ul>
+	<li>Unit testing</li>
+	<li>Responsive design for mobile web users</li>
+	<li>Multibrowser compatibility testing</li>
+	<li>Cronjob / rake task to clean up and/or track incomplete purchases and schedule reminder emails</li>
+	<li>Refactor/optimize views</li>	
+</ul>
+
 
 {% endblock %}
 
