seeded more products

--- a/thuzioapp/templates/thuzioapp/about.html
+++ b/thuzioapp/templates/thuzioapp/about.html
@@ -40,7 +40,9 @@
 	<li>Responsive design for mobile web users</li>
 	<li>Multibrowser compatibility testing</li>
 	<li>Cronjob / rake task to clean up and/or track incomplete purchases and schedule reminder emails</li>
-	<li>Refactor/optimize views</li>	
+	<li>Refactor/optimize views</li>
+	<li>Remove unnecesssary fields from db table</li>
+	<li>Add categories to product table and implement search by categories</li>
 </ul>
 
 
